consumertask4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
spec:
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
      - name: consumer
        image: claratang98/consumer:task-4
---
apiVersion: v1
kind: Service
metadata:
 name: consumer
 annotations:
   konghq.com/plugins: five-per-min
spec:
 selector:
   app: consumer
 ports:
 - port: 80
   targetPort: 8080
