hello-app-deploysvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: hello-app-deploy
spec:
 replicas: 3
 selector:
   matchLabels:
     app: hello-app
 template:
   metadata:
     labels:
       app: hello-app
   spec:
     containers:
     - name: hello-app
       image: gcr.io/google-samples/hello-app:1.0
---
apiVersion: v1
kind: Service
metadata:
 name: hello-app-svc
 annotations:
   konghq.com/plugins: five-per-min
spec:
 selector:
   app: hello-app
 ports:
 - port: 80
   targetPort: 8080
